Mon Apr 11 12:17:01 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* m4/compiler.m4 (ACE_SET_COMPILER_FLAGS):
	* m4/config_h.m4 (ACE_PREP_CONFIG_HEADER):

	  Enable g++ visibility attribute support when using g++ 4.0 or
	  better.

Mon Apr 11 11:50:46 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/README:
	* ace/config-hpux-10.x.h:
	* ace/config-hpux-11.00.h:
	* ace/config-openvms.h:
	* ace/config-osf1-3.2.h:

	  Fix typo: POSIX 1.b -> POSIX.1b.

Mon Apr 11 11:39:11 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/OS_NS_time.h:
	* ace/OS_NS_time.inl:

	  Add ACE_OS::clock_settime().

	* ace/config-chorus.h:
	* ace/config-cygwin32.h:
	* ace/config-hpux-10.x.h:
	* ace/config-hpux-11.00.h:
	* ace/config-integritySCA.h:
	* ace/config-linux-common.h:
	* ace/config-lynxos.h:
	* ace/config-netbsd.h:
	* ace/config-openvms.h:
	* ace/config-osf1-3.2.h:
	* ace/config-osf1-4.0.h:
	* ace/config-qnx-neutrino.h:
	* ace/config-qnx-rtp-62x.h:
	* ace/config-qnx-rtp-pre62x.h:
	* ace/config-rtems.h:
	* ace/config-sunos5.5.h:
	* ace/config-vxworks5.x.h:

	  Define ACE_HAS_CLOCK_SETTIME in every canned config-* header
	  that defines ACE_HAS_CLOCK_GETTIME.

	* ace/README:

	  Document new feature test macro ACE_HAS_CLOCK_SETTIME.

Mon Apr 11 10:27:12 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* include/makeinclude/platform_g++_common.GNU:

	  Fixed ambiguities when determining whether g++ 4.0 or better is
	  being used.

	* include/makeinclude/platform_linux.GNU (CXX):

	  Do not set CXX variable to "g++" if it has been previously set.
	  Addresses problem where g++ version was not retrieved from the
	  g++ compiler set by the user.

Mon Apr 11 15:56:55 2005  Boris Kolpackov  <boris@kolpackov.net>

	* protocols/ace/RMCast/Protocol.h:

	  Moved things around a bit in hope it will help BCB6.

Mon Apr 11 12:58:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/Process_Win32.pm: